--- a/Bot_Funcional_v51104.ipynb
+++ b/Bot_Funcional_v51104.ipynb
@@ -572,6 +572,18 @@
         "\n",
         "    try:\n",
         "        lstm_model = train_lstm_model(df, asset=asset, interval=interval, window_size=20, force_retrain=False)\n",
+        "        if lstm_model:\n",
+        "            print(\"✅ Features usadas no LSTM:\")\n",
+        "            print(lstm_model.feature_cols)\n",
+        "\n",
+        "            print(\"✅ Últimos dados de entrada:\")\n",
+        "            print(df[lstm_model.feature_cols].tail(3))\n",
+        "\n",
+        "            print(\"✅ Valores mínimos do scaler:\")\n",
+        "            print(lstm_model.scaler.data_min_)\n",
+        "\n",
+        "            print(\"✅ Valores máximos do scaler:\")\n",
+        "            print(lstm_model.scaler.data_max_)\n",
         "\n",
         "        if lstm_model is not None:\n",
         "            lstm_preds = []\n",
@@ -1896,10 +1908,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mNs9WU77_fGw",
-        "outputId": "4efd0f97-b508-45ca-9105-9b888bdfa5c4",
+        "outputId": "1a15a798-5942-40b2-90e3-face9f1c8f3d",
         "collapsed": true
       },
-      "execution_count": 28,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1926,8 +1938,8 @@
             "💾 Modelo XGBoost salvo em: /content/models/xgb_model_BTCUSD_15m.joblib\n",
             "📂 Modelo LSTM encontrado em: /content/models/lstm_model_BTCUSD_15m.h5\n",
             "📦 Metadados carregados de: /content/models/lstm_model_BTCUSD_15m_meta.pkl\n",
-            "🔍 Preço atual (15m): $84,744.88\n",
-            "🔮 Previsão LSTM: $348.04\n",
+            "🔍 Preço atual (15m): $84,716.20\n",
+            "🔮 Previsão LSTM: $346.84\n",
             "📈 Variação prevista: -99.59%\n",
             "⚠️ Arquivo inválido (sem colunas): prediction_log.csv\n",
             "⚠️ Ignorando leitura do prediction_log.csv pois está vazio ou ausente.\n",
@@ -1936,14 +1948,42 @@
             "⚠️ Arquivo inválido (sem colunas): /content/prediction_log.csv\n",
             "❌ Arquivo de simulação não encontrado.\n",
             "\n",
-            "📁 Resultados salvos em: model_results_2025-04-17_19-30-53.csv\n",
+            "📁 Resultados salvos em: model_results_2025-04-17_19-46-47.csv\n",
             "⚠️ Arquivo inválido (sem colunas): /content/prediction_log.csv\n",
             "🔄 Log de previsões criado em: /content/prediction_log.csv\n",
             "✅ Análise completa.\n",
             "\n",
             "🧪 Últimos sinais registrados no log:\n",
-            "                      Date   Asset Timeframe     Price  Signal  LSTM_High_Predicted  LSTM_Low_Predicted  LSTM_Predicted      TP1      TP2       SL  TargetPrice  AdjustedProb\n",
-            "2025-04-17 19:30:53.266211 BTC-USD       15m 84744.875       0            347.22467          344.055237      348.042358 83049.98 81355.08 86439.77   348.042358           1.0\n"
+            "                      Date   Asset Timeframe        Price  Signal  LSTM_High_Predicted  LSTM_Low_Predicted  LSTM_Predicted      TP1      TP2       SL  TargetPrice  AdjustedProb\n",
+            "2025-04-17 19:46:47.397541 BTC-USD       15m 84716.195312       0           346.302521           345.78302      346.837433 83021.87 81327.55 86410.52   346.837433           1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df[model.feature_cols].tail()"
+      ],
+      "metadata": {
+        "id": "KGmr1XyAQqmY",
+        "outputId": "50994693-39e8-442a-bee2-7a4a7bea6e19",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'df' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-29-e3aed56fe9a6>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_cols\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
           ]
         }
       ]
@@ -1975,34 +2015,30 @@
       ],
       "metadata": {
         "id": "XiRo4GRJTkqA",
-        "outputId": "ae9a0e59-2727-41b2-b9fc-fd20255bd3b8",
+        "outputId": "8cc70170-8411-4d41-c2ea-282f923c2d5e",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 228
         }
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "📂 Modelo LSTM encontrado em: /content/models/lstm_model_BTCUSD_15m.h5\n",
-            "📦 Metadados carregados de: /content/models/lstm_model_BTCUSD_15m_meta.pkl\n"
+            "🚫 Modelo LSTM NÃO encontrado em: /content/models/lstm_model_BTCUSD_15m.h5\n"
           ]
         },
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:tensorflow:5 out of the last 2256 calls to <function TensorFlowTrainer.make_predict_function.<locals>.one_step_on_data_distributed at 0x7932f527e8e0> triggered tf.function retracing. Tracing is expensive and the excessive number of tracings could be due to (1) creating @tf.function repeatedly in a loop, (2) passing tensors with different shapes, (3) passing Python objects instead of tensors. For (1), please define your @tf.function outside of the loop. For (2), @tf.function has reduce_retracing=True option that can avoid unnecessary retracing. For (3), please refer to https://www.tensorflow.org/guide/function#controlling_retracing and https://www.tensorflow.org/api_docs/python/tf/function for  more details.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 691ms/step\n",
-            "🧪 Saída prevista do modelo LSTM: [0.7755037] → tamanho: 1\n"
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'NoneType' object has no attribute 'feature_cols'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-33-1e6e4cb9bfb0>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;31m# Preparar os dados para previsão\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mfeatures\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_cols\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0mwindow_size\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwindow_size\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0mdf_input\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfeatures\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdropna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'feature_cols'"
           ]
         }
       ]
@@ -2134,9 +2170,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "efa2c74b-c19c-447d-a0a9-38319242bc5a"
+        "outputId": "3cd157b1-1a2d-4d97-89a3-f04d73d17962"
       },
-      "execution_count": 25,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -2168,9 +2204,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "38d43f1a-f079-4edf-fc56-93b28ee6f48f"
+        "outputId": "4c37079e-c8b9-4814-8384-02ff5bbf7bbe"
       },
-      "execution_count": 26,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -2210,15 +2246,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "59c4e165-a676-4d9b-bef1-9e8789161062"
+        "outputId": "c9dcaf27-20f9-446d-9310-702fc67c9702"
       },
-      "execution_count": 27,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "🧹 Arquivo deletado: /content/model_results_2025-04-17_19-16-00.csv\n",
+            "🧹 Arquivo deletado: /content/model_results_2025-04-17_19-30-53.csv\n",
             "✅ Todos os arquivos model_results_*.csv foram removidos.\n"
           ]
         }
