--- a/Bot_Funcional_v51104.ipynb
+++ b/Bot_Funcional_v51104.ipynb
@@ -209,6 +209,7 @@
         "def load_lstm_model(asset, interval, window_size=20):\n",
         "    from tensorflow.keras.models import load_model\n",
         "    import joblib\n",
+        "    import os\n",
         "\n",
         "    model_path = get_model_path(asset, interval, model_type=\"lstm\")\n",
         "    meta_path = model_path.replace(\".h5\", \"_meta.pkl\").replace(\".keras\", \"_meta.pkl\")\n",
@@ -224,13 +225,14 @@
         "        print(f\"❌ Erro ao carregar modelo LSTM de {model_path}: {e}\")\n",
         "        return None\n",
         "\n",
-        "    # Carrega os metadados\n",
+        "    # ✅ Carrega os metadados\n",
         "    if os.path.exists(meta_path):\n",
         "        try:\n",
         "            meta = joblib.load(meta_path)\n",
         "            model.scaler_x = meta.get(\"scaler_x\")\n",
         "            model.scaler_y = meta.get(\"scaler_y\")\n",
         "            model.feature_cols = meta.get(\"feature_cols\")\n",
+        "            model.target_cols = meta.get(\"target_cols\", [\"High\", \"Low\", \"Close\"])\n",
         "            model.window_size = meta.get(\"window_size\", window_size)\n",
         "            print(f\"📦 Metadados carregados de: {meta_path}\")\n",
         "        except Exception as e:\n",
@@ -238,15 +240,18 @@
         "            model.scaler_x = None\n",
         "            model.scaler_y = None\n",
         "            model.feature_cols = None\n",
+        "            model.target_cols = [\"High\", \"Low\", \"Close\"]\n",
         "            model.window_size = window_size\n",
         "    else:\n",
         "        print(f\"⚠️ Metadados não encontrados em: {meta_path}\")\n",
         "        model.scaler_x = None\n",
         "        model.scaler_y = None\n",
         "        model.feature_cols = None\n",
+        "        model.target_cols = [\"High\", \"Low\", \"Close\"]\n",
         "        model.window_size = window_size\n",
         "\n",
         "    return model\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -470,10 +475,6 @@
         "    return np.array(X), np.array(y), scaler_x, scaler_y\n",
         "\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
         "def train_lstm_model(df, *, asset, interval, window_size=20, force_retrain=False):\n",
         "    import os\n",
         "    import numpy as np\n",
@@ -490,7 +491,6 @@
         "    if len(df) <= window_size:\n",
         "        raise ValueError(\"Dados insuficientes para treino do LSTM.\")\n",
         "\n",
-        "    # Pré-processamento e escalonamento com dois scalers\n",
         "    df_features = df[feature_cols]\n",
         "    df_targets = df[target_cols]\n",
         "\n",
@@ -509,19 +509,17 @@
         "    y = np.array(y)\n",
         "\n",
         "    print(f\"✅ X.shape: {X.shape}, y.shape: {y.shape}\")\n",
-        "    print(f\"✅ Primeiros 3 alvos y:\\n{y[:3]}\")\n",
         "\n",
         "    model_path = get_model_path(asset, interval, model_type=\"lstm\")\n",
         "    meta_path = model_path.replace(\".h5\", \"_meta.pkl\")\n",
         "\n",
         "    if not force_retrain and os.path.exists(model_path):\n",
         "        model = load_lstm_model(asset, interval)\n",
-        "        if model and all(hasattr(model, a) for a in [\"scaler_x\", \"scaler_y\", \"feature_cols\", \"window_size\"]):\n",
+        "        if model and all(hasattr(model, attr) for attr in [\"scaler_x\", \"scaler_y\", \"feature_cols\", \"window_size\", \"target_cols\"]):\n",
         "            return model\n",
         "        else:\n",
         "            print(\"⚠️ Modelo existente não contém atributos. Será refeito.\")\n",
         "\n",
-        "    # Construção e treino do modelo\n",
         "    model = Sequential()\n",
         "    model.add(LSTM(64, return_sequences=False, input_shape=(X.shape[1], X.shape[2])))\n",
         "    model.add(Dense(3))  # Prever [High, Low, Close]\n",
@@ -530,10 +528,10 @@
         "    es = EarlyStopping(patience=10, restore_best_weights=True)\n",
         "    model.fit(X, y, epochs=100, batch_size=32, validation_split=0.2, callbacks=[es], verbose=0)\n",
         "\n",
-        "    # Atributos manuais para reutilizar depois\n",
         "    model.scaler_x = scaler_x\n",
         "    model.scaler_y = scaler_y\n",
         "    model.feature_cols = feature_cols\n",
+        "    model.target_cols = target_cols\n",
         "    model.window_size = window_size\n",
         "\n",
         "    model.save(model_path)\n",
@@ -541,12 +539,14 @@
         "        \"scaler_x\": scaler_x,\n",
         "        \"scaler_y\": scaler_y,\n",
         "        \"feature_cols\": feature_cols,\n",
+        "        \"target_cols\": target_cols,\n",
         "        \"window_size\": window_size\n",
         "    }, meta_path)\n",
         "\n",
         "    print(f\"💾 Modelo LSTM salvo em: {model_path}\")\n",
         "    print(f\"📦 Metadados salvos em: {meta_path}\")\n",
         "    return model\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -673,7 +673,10 @@
         "\n",
         "\n",
         "def predict_with_lstm(model, df):\n",
-        "    if not all(hasattr(model, attr) for attr in ['scaler_x', 'scaler_y', 'feature_cols', 'window_size']):\n",
+        "    import numpy as np\n",
+        "    import pandas as pd\n",
+        "\n",
+        "    if not all(hasattr(model, attr) for attr in ['scaler_x', 'scaler_y', 'feature_cols', 'window_size', 'target_cols']):\n",
         "        raise AttributeError(\"O modelo LSTM não possui os atributos necessários.\")\n",
         "\n",
         "    df = df.copy().dropna(subset=model.feature_cols)\n",
@@ -685,13 +688,15 @@
         "    X_input = np.expand_dims(scaled_window, axis=0)\n",
         "\n",
         "    pred_scaled = model.predict(X_input, verbose=0)[0].reshape(1, -1)\n",
-        "    pred_descaled = model.scaler_y.inverse_transform(pred_scaled)[0]\n",
+        "    pred_df = pd.DataFrame(pred_scaled, columns=model.target_cols)  # ✅ Garante a ordem correta\n",
+        "    pred_descaled = model.scaler_y.inverse_transform(pred_df)[0]\n",
         "\n",
         "    return {\n",
         "        \"High\": float(pred_descaled[0]),\n",
         "        \"Low\": float(pred_descaled[1]),\n",
         "        \"Close\": float(pred_descaled[2])\n",
         "    }\n",
+        "\n",
         "\n",
         "\n",
         "\n",
@@ -1966,12 +1971,12 @@
         "df[model.feature_cols].tail()"
       ],
       "metadata": {
-        "id": "KGmr1XyAQqmY",
-        "outputId": "50994693-39e8-442a-bee2-7a4a7bea6e19",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 141
-        }
+        },
+        "id": "KGmr1XyAQqmY",
+        "outputId": "50994693-39e8-442a-bee2-7a4a7bea6e19"
       },
       "execution_count": 29,
       "outputs": [
@@ -2155,10 +2160,22 @@
         "criar_prediction_log_padrao(\"/content/prediction_log.csv\")\n"
       ],
       "metadata": {
-        "id": "h84-EYFPKgVi"
+        "id": "h84-EYFPKgVi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a0eb2405-9114-4b0e-98e3-98f3f39dc5c0"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "⚠️ Adicionando colunas faltantes: ['Acertou', 'Resultado', 'PrecoSaida', 'LucroEstimado', 'DuracaoMin']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2170,9 +2187,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3cd157b1-1a2d-4d97-89a3-f04d73d17962"
+        "outputId": "70f427a7-20c7-4fea-c44e-0bfea9c5e0f6"
       },
-      "execution_count": 30,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -2204,9 +2221,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4c37079e-c8b9-4814-8384-02ff5bbf7bbe"
+        "outputId": "600600c8-c350-469c-a2c8-0a62b3e1ac51"
       },
-      "execution_count": 31,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -2246,15 +2263,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c9dcaf27-20f9-446d-9310-702fc67c9702"
+        "outputId": "349c5eb6-eba7-4bd1-e76e-27bcfb839eec"
       },
-      "execution_count": 32,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "🧹 Arquivo deletado: /content/model_results_2025-04-17_19-30-53.csv\n",
+            "🧹 Arquivo deletado: /content/model_results_2025-04-17_19-46-47.csv\n",
             "✅ Todos os arquivos model_results_*.csv foram removidos.\n"
           ]
         }
