--- a/Modelo_Funcional_Close,_Min_High.ipynb
+++ b/Modelo_Funcional_Close,_Min_High.ipynb
@@ -713,48 +713,53 @@
         "      return model\n",
         "\n",
         "\n",
+        "def predict_with_lstm(model, df, asset=\"N/A\", interval=\"N/A\"):\n",
+        "    \"\"\"\n",
+        "    Faz a previsão com LSTM usando o último window de dados.\n",
+        "    Inclui validações para evitar valores irreais e registra previsões descartadas.\n",
+        "    \"\"\"\n",
         "\n",
+        "    if not all(hasattr(model, attr) for attr in ['scaler_x', 'scaler_y', 'feature_cols', 'window_size']):\n",
+        "        raise AttributeError(\"O modelo LSTM não possui os atributos necessários (scaler_x, scaler_y, feature_cols, window_size).\")\n",
         "\n",
-        "  def predict_with_lstm(model, df):\n",
-        "      if not all(hasattr(model, attr) for attr in ['scaler_x', 'scaler_y', 'feature_cols', 'window_size']):\n",
-        "          raise AttributeError(\"O modelo LSTM não possui os atributos necessários (scaler_x, scaler_y, feature_cols, window_size).\")\n",
+        "    df = df.copy().dropna(subset=model.feature_cols)\n",
+        "    if len(df) < model.window_size:\n",
+        "        raise ValueError(\"Dados insuficientes para previsão com LSTM.\")\n",
         "\n",
-        "      df = df.copy().dropna(subset=model.feature_cols)\n",
-        "      if len(df) < model.window_size:\n",
-        "          raise ValueError(\"Dados insuficientes para previsão com LSTM.\")\n",
+        "    last_window = df[model.feature_cols].values[-model.window_size:]\n",
+        "    scaled_window = model.scaler_x.transform(last_window)\n",
+        "    X_input = np.expand_dims(scaled_window, axis=0)\n",
         "\n",
-        "      last_window = df[model.feature_cols].values[-model.window_size:]\n",
-        "      scaled_window = model.scaler_x.transform(last_window)\n",
-        "      X_input = np.expand_dims(scaled_window, axis=0)\n",
+        "    pred_scaled = model.predict(X_input, verbose=0)[0].reshape(1, -1)\n",
+        "    pred_descaled = model.scaler_y.inverse_transform(pred_scaled)[0]\n",
         "\n",
-        "      pred_scaled = model.predict(X_input, verbose=0)[0].reshape(1, -1)\n",
-        "      pred_descaled = model.scaler_y.inverse_transform(pred_scaled)[0]\n",
+        "    high, low, close = float(pred_descaled[0]), float(pred_descaled[1]), float(pred_descaled[2])\n",
         "\n",
-        "      high, low, close = float(pred_descaled[0]), float(pred_descaled[1]), float(pred_descaled[2])\n",
+        "    # 🔒 Correção 1: High deve ser maior ou igual ao Low\n",
+        "    if low > high:\n",
+        "        print(f\"⚠️ Corrigindo inversão de High/Low na previsão LSTM. High={high:.2f}, Low={low:.2f}\")\n",
+        "        high, low = max(high, low), min(high, low)\n",
         "\n",
-        "      # 🔒 Correção 1: High deve ser maior ou igual ao Low\n",
-        "      if low > high:\n",
-        "          print(f\"⚠️ Corrigindo inversão de High/Low na previsão LSTM. High={high:.2f}, Low={low:.2f}\")\n",
-        "          high, low = max(high, low), min(high, low)\n",
+        "    # 🔒 Correção 2: Close deve ficar entre Low e High\n",
+        "    if close < low or close > high:\n",
+        "        print(f\"⚠️ Ajustando Close fora da faixa. Antes: {close:.2f}\")\n",
+        "        close = max(min(close, high), low)\n",
+        "        print(f\"✅ Close ajustado para: {close:.2f}\")\n",
         "\n",
-        "      # 🔒 Correção 2: Close deve ficar entre Low e High\n",
-        "      if close < low or close > high:\n",
-        "          print(f\"⚠️ Ajustando Close fora da faixa. Antes: {close:.2f}\")\n",
-        "          close = max(min(close, high), low)\n",
-        "          print(f\"✅ Close ajustado para: {close:.2f}\")\n",
+        "    # 🔒 Validação 3: Verifica se o Close projetado é plausível (não explodiu)\n",
+        "    preco_atual = df[\"Close\"].iloc[-1]\n",
+        "    if preco_atual > 0:\n",
+        "        variacao_permitida = 0.5  # 50%\n",
+        "        if abs(close - preco_atual) / preco_atual > variacao_permitida:\n",
+        "            print(f\"❌ Previsão absurda detectada. Atual={preco_atual:.2f} Previsto={close:.2f}\")\n",
+        "            log_previsao_absurda(asset=asset, interval=interval, preco_atual=preco_atual, close_previsto=close)\n",
+        "            return {\"High\": None, \"Low\": None, \"Close\": None}\n",
         "\n",
-        "      return {\n",
-        "          \"High\": high,\n",
-        "          \"Low\": low,\n",
-        "          \"Close\": close\n",
-        "      }\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "    return {\n",
+        "        \"High\": round(high, 4),\n",
+        "        \"Low\": round(low, 4),\n",
+        "        \"Close\": round(close, 4)\n",
+        "    }\n",
         "\n",
         "\n",
         "\n",
@@ -1034,6 +1039,25 @@
         "\n",
         "\n",
         "\n",
+        "def log_previsao_absurda(asset, interval, preco_atual, close_previsto):\n",
+        "    try:\n",
+        "        path = \"/content/previsoes_descartadas.csv\"\n",
+        "        row = {\n",
+        "            \"Data\": datetime.now(BR_TZ).strftime(\"%Y-%m-%d %H:%M:%S\"),\n",
+        "            \"Asset\": asset,\n",
+        "            \"Timeframe\": interval,\n",
+        "            \"PrecoAtual\": preco_atual,\n",
+        "            \"PrevistoClose\": close_previsto,\n",
+        "            \"Variacao(%)\": round((close_previsto - preco_atual) / preco_atual * 100, 2)\n",
+        "        }\n",
+        "        df = pd.DataFrame([row])\n",
+        "        if os.path.exists(path):\n",
+        "            df.to_csv(path, mode=\"a\", header=False, index=False)\n",
+        "        else:\n",
+        "            df.to_csv(path, index=False)\n",
+        "        print(f\"🧾 Previsão absurda registrada em: {path}\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"⚠️ Falha ao logar previsão absurda: {e}\")\n",
         "\n",
         "\n",
         "\n",
@@ -1853,10 +1877,17 @@
         "              try:\n",
         "                  lstm_model = lstm_models.get(interval)\n",
         "                  if lstm_model:\n",
-        "                      pred_lstm = predict_with_lstm(lstm_model, data[interval])\n",
-        "                      predicted_price_lstm = pred_lstm.get(\"Close\")\n",
-        "                      pred_high = pred_lstm.get(\"High\")\n",
-        "                      pred_low = pred_lstm.get(\"Low\")\n",
+        "                      pred_lstm = predict_with_lstm(lstm_model, data[interval], asset=asset, interval=interval)\n",
+        "\n",
+        "                      # Verifica se a previsão retornou valores válidos\n",
+        "                      if pred_lstm is None or any(pred_lstm.get(k) is None for k in [\"High\", \"Low\", \"Close\"]):\n",
+        "                          print(f\"⚠️ Previsão LSTM inválida para {asset} ({interval}) — pulando análise.\")\n",
+        "                          continue\n",
+        "\n",
+        "                      predicted_price_lstm = pred_lstm[\"Close\"]\n",
+        "                      pred_high = pred_lstm[\"High\"]\n",
+        "                      pred_low = pred_lstm[\"Low\"]\n",
+        "\n",
         "              except Exception as e:\n",
         "                  print(f\"[!] Erro na previsão LSTM: {e}\")\n",
         "\n",
@@ -2126,42 +2157,151 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 401
+          "base_uri": "https://localhost:8080/"
         },
         "id": "_FRgd1-k06BB",
-        "outputId": "71a0b2df-7ea0-48b6-fb0d-ee57332b9912"
+        "outputId": "ae0a531a-01ef-44cf-f9eb-5888ef7cbb18"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "⏳ [1h] Ainda não é hora... 15:09:22\n",
+            "⏳ [1wk] Ainda não é hora... 15:09:22\n",
+            "⏳ [1d] Ainda não é hora... 15:09:22\n",
             "🧵 Iniciando threads para cada timeframe...\n",
-            "⏳ [15m] Ainda não é hora... 14:58:08\n",
-            "⏳ [1h] Ainda não é hora... 14:58:08\n",
-            "⏳ [1d] Ainda não é hora... 14:58:08\n",
-            "⏳ [1wk] Ainda não é hora... 14:58:08\n",
-            "⏳ [1d] Ainda não é hora... 14:58:10⏳ [1wk] Ainda não é hora... 14:58:10\n",
-            "⏳ [15m] Ainda não é hora... 14:58:10\n",
+            "⏳ [15m] Ainda não é hora... 15:09:22\n",
+            "⏳ [1h] Ainda não é hora... 15:09:22\n",
+            "⏳ [1d] Ainda não é hora... 15:09:22\n",
+            "⏳ [1wk] Ainda não é hora... 15:09:22\n",
+            "⏳ [15m] Ainda não é hora... 15:09:28\n",
+            "⏳ [1h] Ainda não é hora... 15:09:30\n",
+            "⏳ [1h] Ainda não é hora... 15:09:30\n",
+            "⏳ [1d] Ainda não é hora... 15:09:37\n",
+            "⏳ [1wk] Ainda não é hora... 15:09:37\n",
+            "⏳ [1d] Ainda não é hora... 15:09:38\n",
+            "⏳ [1wk] Ainda não é hora... 15:09:38\n",
+            "⏳ [1wk] Ainda não é hora... 15:09:39\n",
+            "⏳ [1d] Ainda não é hora... 15:09:39\n",
+            "⏳ [1wk] Ainda não é hora... 15:09:41\n",
+            "⏳ [1d] Ainda não é hora... 15:09:41\n",
+            "⏳ [1d] Ainda não é hora... 15:09:41\n",
+            "⏳ [1wk] Ainda não é hora... 15:09:41\n",
+            "⏳ [1wk] Ainda não é hora... 15:09:44\n",
+            "⏳ [1d] Ainda não é hora... 15:09:44\n",
+            "⏳ [1h] Ainda não é hora... 15:09:45\n",
+            "⏳ [15m] Ainda não é hora... 15:09:45\n",
+            "⏳ [15m] Ainda não é hora... 15:09:45\n",
+            "⏳ [1h] Ainda não é hora... 15:09:47\n",
+            "⏳ [15m] Ainda não é hora... 15:09:47\n",
+            "⏳ [1h] Ainda não é hora... 15:09:48\n",
+            "⏳ [15m] Ainda não é hora... 15:09:48\n",
+            "⏳ [1h] Ainda não é hora... 15:09:48\n",
+            "⏳ [1wk] Ainda não é hora... 15:09:48\n",
+            "⏳ [1d] Ainda não é hora... 15:09:48\n",
+            "⏳ [15m] Ainda não é hora... 15:09:49\n",
+            "⏳ [1h] Ainda não é hora... 15:09:49\n",
+            "⏳ [15m] Ainda não é hora... 15:09:49\n",
+            "⏳ [15m] Ainda não é hora... 15:09:51\n",
+            "⏳ [1h] Ainda não é hora... 15:09:52\n",
+            "⏳ [1wk] Ainda não é hora... 15:09:52\n",
+            "⏳ [1d] Ainda não é hora... 15:09:52\n",
+            "⏳ [15m] Ainda não é hora... 15:09:52\n",
+            "⏳ [1h] Ainda não é hora... 15:09:52\n",
+            "⏳ [1d] Ainda não é hora... 15:09:52\n",
+            "⏳ [1wk] Ainda não é hora... 15:09:52\n",
+            "⏳ [15m] Ainda não é hora... 15:09:58\n",
+            "⏳ [1h] Ainda não é hora... 15:10:00\n",
+            "⏳ [1h] Ainda não é hora... 15:10:00\n",
+            "⏳ [1d] Ainda não é hora... 15:10:07\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:07\n",
+            "⏳ [1d] Ainda não é hora... 15:10:08\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:08\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:09\n",
+            "⏳ [1d] Ainda não é hora... 15:10:09\n",
+            "⏳ [1d] Ainda não é hora... 15:10:11⏳ [1wk] Ainda não é hora... 15:10:11\n",
             "\n",
-            "⏳ [1h] Ainda não é hora... 14:58:10\n",
-            "⏳ [1h] Ainda não é hora... 14:58:11\n",
-            "⏳ [1wk] Ainda não é hora... 14:58:11\n",
-            "⏳ [1d] Ainda não é hora... 14:58:11\n",
-            "⏳ [15m] Ainda não é hora... 14:58:11\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-43-dcecc24bbfd3>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m   1996\u001b[0m     \u001b[0;31m# Manter o programa rodando\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1997\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1998\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m60\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+            "⏳ [1d] Ainda não é hora... 15:10:11\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:11\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:14\n",
+            "⏳ [1d] Ainda não é hora... 15:10:14\n",
+            "⏳ [1h] Ainda não é hora... 15:10:15\n",
+            "⏳ [15m] Ainda não é hora... 15:10:15\n",
+            "⏳ [15m] Ainda não é hora... 15:10:15\n",
+            "⏳ [1h] Ainda não é hora... 15:10:17\n",
+            "⏳ [15m] Ainda não é hora... 15:10:17\n",
+            "⏳ [1h] Ainda não é hora... 15:10:18\n",
+            "⏳ [15m] Ainda não é hora... 15:10:18\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:18\n",
+            "⏳ [1h] Ainda não é hora... 15:10:18\n",
+            "⏳ [1d] Ainda não é hora... 15:10:18\n",
+            "⏳ [15m] Ainda não é hora... 15:10:19\n",
+            "⏳ [1h] Ainda não é hora... 15:10:19\n",
+            "⏳ [15m] Ainda não é hora... 15:10:19\n",
+            "⏳ [15m] Ainda não é hora... 15:10:21\n",
+            "⏳ [1h] Ainda não é hora... 15:10:22\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:22\n",
+            "⏳ [1d] Ainda não é hora... 15:10:22\n",
+            "⏳ [15m] Ainda não é hora... 15:10:22\n",
+            "⏳ [1h] Ainda não é hora... 15:10:22\n",
+            "⏳ [1d] Ainda não é hora... 15:10:22\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:22\n",
+            "⏳ [15m] Ainda não é hora... 15:10:28\n",
+            "⏳ [1h] Ainda não é hora... 15:10:30\n",
+            "⏳ [1h] Ainda não é hora... 15:10:30\n",
+            "⏳ [1d] Ainda não é hora... 15:10:37\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:37\n",
+            "⏳ [1d] Ainda não é hora... 15:10:38\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:38\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:39\n",
+            "⏳ [1d] Ainda não é hora... 15:10:39\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:41⏳ [1d] Ainda não é hora... 15:10:41\n",
+            "\n",
+            "⏳ [1d] Ainda não é hora... 15:10:41\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:41\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:44\n",
+            "⏳ [1d] Ainda não é hora... 15:10:44\n",
+            "⏳ [1h] Ainda não é hora... 15:10:45\n",
+            "⏳ [15m] Ainda não é hora... 15:10:45\n",
+            "⏳ [15m] Ainda não é hora... 15:10:45\n",
+            "⏳ [1h] Ainda não é hora... 15:10:47\n",
+            "⏳ [15m] Ainda não é hora... 15:10:47\n",
+            "⏳ [1h] Ainda não é hora... 15:10:48\n",
+            "⏳ [15m] Ainda não é hora... 15:10:48\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:48\n",
+            "⏳ [1h] Ainda não é hora... 15:10:48\n",
+            "⏳ [1d] Ainda não é hora... 15:10:48\n",
+            "⏳ [15m] Ainda não é hora... 15:10:49\n",
+            "⏳ [1h] Ainda não é hora... 15:10:49\n",
+            "⏳ [15m] Ainda não é hora... 15:10:49\n",
+            "⏳ [15m] Ainda não é hora... 15:10:51\n",
+            "⏳ [1h] Ainda não é hora... 15:10:52\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:52\n",
+            "⏳ [1d] Ainda não é hora... 15:10:52\n",
+            "⏳ [15m] Ainda não é hora... 15:10:52⏳ [1h] Ainda não é hora... 15:10:52\n",
+            "\n",
+            "⏳ [1d] Ainda não é hora... 15:10:52\n",
+            "⏳ [1wk] Ainda não é hora... 15:10:52\n",
+            "⏳ [15m] Ainda não é hora... 15:10:58\n",
+            "⏳ [1h] Ainda não é hora... 15:11:00\n",
+            "⏳ [1h] Ainda não é hora... 15:11:00\n",
+            "⏳ [1d] Ainda não é hora... 15:11:07\n",
+            "⏳ [1wk] Ainda não é hora... 15:11:07\n",
+            "⏳ [1d] Ainda não é hora... 15:11:08\n",
+            "⏳ [1wk] Ainda não é hora... 15:11:08\n",
+            "⏳ [1wk] Ainda não é hora... 15:11:09\n",
+            "⏳ [1d] Ainda não é hora... 15:11:09\n",
+            "⏳ [1d] Ainda não é hora... 15:11:11⏳ [1wk] Ainda não é hora... 15:11:11\n",
+            "\n",
+            "⏳ [1d] Ainda não é hora... 15:11:11\n",
+            "⏳ [1wk] Ainda não é hora... 15:11:11\n",
+            "⏳ [1wk] Ainda não é hora... 15:11:14\n",
+            "⏳ [1d] Ainda não é hora... 15:11:14\n",
+            "⏳ [1h] Ainda não é hora... 15:11:15\n",
+            "⏳ [15m] Ainda não é hora... 15:11:15\n",
+            "⏳ [15m] Ainda não é hora... 15:11:15\n"
           ]
         }
       ]
